[package]
name = "adventofcode2023"
description = "Advent of Code 2023"
version = "0.1.0"
edition = "2021"
authors = ["Mikael Sahlström <mick.sahlstrom@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = ["derive"] }
